--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "private": true,
     "scripts": {
         "dev": "npm run development",
-	"tst": "node ./node_modules/cross-env/src/bin/cross-env.js NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+        "tst": "node ./node_modules/cross-env/src/bin/cross-env.js NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
         "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
         "watch": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
         "watch-poll": "npm run watch -- --watch-poll",
@@ -14,14 +14,10 @@
         "axios": "^0.19.0",
         "bootstrap-sass": "^3.3.7",
         "jquery": "^3.2",
-        "laravel-mix": "^5.0.0",
+        "laravel-mix": "^4.0.7",
         "lodash": "^4.17.4",
-        "vue": "^2.5.7"
-    },
-    "dependencies": {
+        "vue": "^2.5.17",
         "ajv": "^6.10.2",
-        "cross-env": "^6.0.3",
-        "webpack": "^4.41.2",
-        "webpack-mix": "^2.0.2"
+        "cross-env": "^5.1"
     }
 }
