--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": ">=7.1.30",
         "elibyy/tcpdf-laravel": "^5.8",
         "fideloper/proxy": "~4.0",
+        "google/recaptcha": "^1.2",
         "jenssegers/agent": "^2.6",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "~1.0",
